--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
         Tareas pendientes: # completadas: #
     </div>
 
+    <div class="prueba 2 git">
+
+    </div>
+
     <script src="./js/main.js"></script>
 </body>
 </html>
